--- a/compiler/index.html
+++ b/compiler/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="codemirror.css">
-  <script src="codemirror.js"></script>
-  <script src="mode/javascript/javascript.js"></script>
-  <script src="compiler.js"></script>
+  <link href="https://cdnjs.cloudfare.com/ajax/libs/codemirror/5.3.0/codemirror.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudfare.com/ajax/libs/codemirror/5.3.0/codemirror.js"></script>
+    <script src="https://cdnjs.cloudfare.com/ajax/libs/codemirror/5.3.0/mode/javascript/javascript.js"></script>
+    <script src="https://cdnjs.cloudfare.com/ajax/libs/codemirror/5.3.0/addon/edit/matchbrackets.js"></script>
 </head>
 <body>
   <textarea id="editor"></textarea>
