--- a/to-do/index.html
+++ b/to-do/index.html
@@ -7,6 +7,11 @@
       .container {
         display: flex;
       }
+      ul {
+  list-style: none;
+  padding: 0;
+}
+
       .list {
         flex: 1;
         border: 1px solid black;
