--- a/to-do/index.html
+++ b/to-do/index.html
@@ -4,30 +4,63 @@
     <meta charset="utf-8">
     <title>Draggable To-Do List</title>
     <style>
-      .container {
-        display: flex;
-      }
-      ul {
+      * {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f2f2f2;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 30px;
+}
+
+.list {
+  flex: 1;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  margin: 0 10px;
+  padding: 20px;
+  max-width: 300px;
+  min-height: 300px;
+}
+
+.list h2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+ul {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
-      .list {
-        flex: 1;
-        border: 1px solid black;
-        margin: 10px;
-        padding: 10px;
-        min-height: 200px;
-      }
-      .list h2 {
-        margin-top: 0;
-      }
-      .item {
-        margin: 10px 0;
-        padding: 10px;
-        border: 1px solid gray;
-        cursor: move;
-      }
+.item {
+  background-color: #f2f2f2;
+  border-radius: 5px;
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+  color: #333;
+  cursor: move;
+  margin: 10px 0;
+  padding: 10px;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.item:hover {
+  background-color: #e6e6e6;
+}
+
     </style>
   </head>
   <body>
