--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -1,95 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bookmark Webpage</title>
+	<title>Bookmarks</title>
 	<style>
-		/* Add some basic styling */
-		body {
-			font-family: Arial, sans-serif;
-			margin: 0;
-			padding: 0;
-		}
-		
-		h1 {
-			text-align: center;
-			margin-top: 50px;
-		}
-		
-		form {
-			margin: 50px auto;
-			max-width: 500px;
-			padding: 20px;
-			border: 1px solid #ccc;
-			border-radius: 5px;
-		}
-		
-		input[type="text"],
-		input[type="url"] {
-			width: 100%;
-			padding: 10px;
-			margin-bottom: 10px;
-			border: 1px solid #ccc;
-			border-radius: 5px;
-			box-sizing: border-box;
-			font-size: 16px;
-		}
-		
-		input[type="submit"] {
-			background-color: #4CAF50;
-			color: white;
-			padding: 10px 20px;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-			font-size: 16px;
-		}
-		
-		input[type="file"] {
-			display: none;
-		}
-		
-		label.upload-btn {
-			display: block;
-			background-color: #4CAF50;
-			color: white;
-			padding: 10px 20px;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-			font-size: 16px;
-			text-align: center;
-			margin-bottom: 10px;
-		}
-		
-		 label.upload-btn:hover {
-			background-color: #3e8e41;
-		}
-		
-		ul {
-			list-style: none;
-			padding: 0;
-			margin: 0;
-		}
-		
-		li {
-			margin-bottom: 10px;
-		}
-		
-		.delete-btn {
-			background-color: #f44336;
-			color: white;
-			padding: 5px 10px;
-			border: none;
-			border-radius: 5px;
-			cursor: pointer;
-			font-size: 16px;
-			margin-left: 10px;
-		}
-		
-		.delete-btn:hover {
-			background-color: #d32f2f;
-		}
-		
 		.embed-container {
 			position: relative;
 			padding-bottom: 56.25%;
@@ -97,122 +10,97 @@
 			overflow: hidden;
 		}
 		
-		.embed-container iframe,
-		.embed-container object,
-		.embed-container embed {
+		.embed-container iframe {
 			position: absolute;
 			top: 0;
 			left: 0;
 			width: 100%;
 			height: 100%;
 		}
+		
+		.delete-btn {
+			margin-left: 1rem;
+			padding: 0.2rem 0.5rem;
+			background-color: #f44336;
+			color: #fff;
+			border: none;
+			border-radius: 0.2rem;
+			cursor: pointer;
+		}
 	</style>
 </head>
 <body>
-	<h1>Bookmark Webpage</h1>
+	<h1>Bookmarks</h1>
 	
 	<form id="bookmark-form">
-		<label for="bookmark-name">Bookmark Name</label>
+		<label for="bookmark-name">Name:</label>
 		<input type="text" id="bookmark-name" name="bookmark-name" required>
 		
-		<label for="bookmark-url">Bookmark URL</label>
+		<label for="bookmark-url">URL:</label>
 		<input type="url" id="bookmark-url" name="bookmark-url" required>
 		
 		<input type="submit" value="Add">
 	</form>
 	
 	<form id="file-upload-form">
-		<label for="file-upload" class="upload-btn">Upload File</label>
-		<input type="file" id="file-upload" name="file-upload">
-    </form>
-    <ul id="bookmark-list"></ul>
-
-<script>
-	// Function to add a bookmark to the list
-	function addBookmark(name, url) {
-		// Create a new li element and append it to the ul
-		var li = document.createElement("li");
-		var a = document.createElement("a");
-		a.textContent = name;
-		a.href = url;
-		li.appendChild(a);
-		
-		// Create a delete button and append it to the li
-		var deleteBtn = document.createElement("button");
-		deleteBtn.textContent = "Delete";
-		deleteBtn.classList.add("delete-btn");
-		deleteBtn.addEventListener("click", function() {
-			li.parentNode.removeChild(li);
-		});
-		li.appendChild(deleteBtn);
-		
-		// Append the li to the ul
-		document.getElementById("bookmark-list").appendChild(li);
-	}
+		<label for="file-upload">Upload Files:</label>
+		<input type="file" id="file-upload" name="file-upload" multiple>
+	</form>
 	
-	// Function to handle the form submission
-	function handleFormSubmit(event) {
-		event.preventDefault();
-		
-		// Get the values from the form
-		var name = document.getElementById("bookmark-name").value;
-		var url = document.getElementById("bookmark-url").value;
-		
-		// Add the bookmark to the list
-		addBookmark(name, url);
-		
-		// Reset the form
-		document.getElementById("bookmark-form").reset();
-	}
+	<ul id="bookmark-list"></ul>
 	
-	// Function to handle file upload
-	function handleFileUpload(event) {
-		var fileList = event.target.files;
-		
-		// Loop through the files and add them to the list
-		for (var i = 0; i < fileList.length; i++) {
-			var file = fileList[i];
-			addBookmark(file.name, URL.createObjectURL(file));
+	<script>
+		// Function to add a bookmark to the list
+		function addBookmark(name, url) {
+			// Create a new li element and append it to the ul
+			var li = document.createElement("li");
+			var a = document.createElement("a");
+			a.textContent = name;
+			a.href = url;
+			li.appendChild(a);
+			
+			// Create a delete button and append it to the li
+			var deleteBtn = document.createElement("button");
+			deleteBtn.textContent = "Delete";
+			deleteBtn.classList.add("delete-btn");
+			deleteBtn.addEventListener("click", function() {
+				li.parentNode.removeChild(li);
+			});
+			li.appendChild(deleteBtn);
+			
+			// Append the li to the ul
+			document.getElementById("bookmark-list").appendChild(li);
 		}
 		
-		// Reset the form
-		document.getElementById("file-upload-form").reset();
-	}
-	
-	// Attach event listeners to the forms
-	document.getElementById("bookmark-form").addEventListener("submit", handleFormSubmit);
-	document.getElementById("file-upload").addEventListener("change", handleFileUpload);
-	
-	// Function to generate the embed code for a YouTube video
-	function generateEmbedCode(url) {
-		var videoId = url.split("v=")[1];
-		return '<div class="embed-container"><iframe src="https://www.youtube.com/embed/' + videoId + '" frameborder="0" allowfullscreen></iframe></div>';
-	}
-	
-	// Function to handle adding a YouTube video
-	function handleYouTubeSubmit(event) {
-		event.preventDefault();
+		// Function to handle the form submission
+		function handleFormSubmit(event) {
+			event.preventDefault();
+			
+			// Get the values from the form
+			var name = document.getElementById("bookmark-name").value;
+			var url = document.getElementById("bookmark-url").value;
+			
+			// Add the bookmark to the list
+			addBookmark(name, url);
+			
+			// Reset the form
+			document.getElementById("bookmark-form").reset();
+		}
 		
-		// Get the YouTube URL from the form
-		var url = document.getElementById("youtube-url").value;
+		// Function to handle file upload
+		function handleFileUpload(event) {
+			var fileList = event.target.files;
+			
+			// Loop through the files and add them to the list
+			for (var i = 0; i < fileList.length; i++) {
+				var file = fileList[i];
+				addBookmark(file.name, URL.createObjectURL(file));
+			}
+			
+			// Reset the form
+			document.getElementById("file-upload-form").reset();
+		}
 		
-		// Generate the embed code and add it to the list
-		addBookmark("YouTube Video", generateEmbedCode(url));
-		
-		// Reset the form
-		document.getElementById("youtube-form").reset();
-	}
-	
-	// Attach event listener to the YouTube form
-	document.getElementById("youtube-form").addEventListener("submit", handleYouTubeSubmit);
-</script>
-
-<form id="youtube-form">
-	<label for="youtube-url">YouTube Video URL</label>
-	<input type="url" id="youtube-url" name="youtube-url" required>
-	
-	<input type="submit" value="Add">
-</form>
-
-</body>
-</html>
+		// Attach event listeners to the forms
+		document.getElementById("bookmark-form").addEventListener("submit", handleFormSubmit);
+		document.getElementById("file-upload").addEventListener("change", handleFileUpload);
