--- a/to-do/index.html
+++ b/to-do/index.html
@@ -60,7 +60,39 @@ ul {
 .item:hover {
   background-color: #e6e6e6;
 }
-
+.container {
+    display: flex;
+  }
+  
+  .task-list {
+    margin: 10px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 200px;
+    height: 300px;
+  }
+  
+  .task-list h2 {
+    text-align: center;
+  }
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    height: 100%;
+  }
+  
+  li {
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+    margin-bottom: 5px;
+    cursor: move;
+  }
+  
     </style>
   </head>
   <body>
