--- a/to-do/index.html
+++ b/to-do/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Draggable To-Do List</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
