--- a/index.html
+++ b/index.html
@@ -1,78 +1,79 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Panel Repository</title>
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-	<style>
-		/* Style for the taskbar */
-		#taskbar {
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			width: 100%;
-			height: 50px;
-			background-color: #333;
-			color: #fff;
-			padding: 10px;
-		}
-
-		/* Style for the floating windows */
-		.window {
-			position: absolute;
-			top: 50px;
-			left: 50px;
-			width: 400px;
-			height: 300px;
-			background-color: #fff;
-			border: 1px solid #333;
-			padding: 10px;
-		}
-	</style>
-	<script>
-		$( function() {
-			// Make windows draggable
-			$( ".window" ).draggable();
-
-			// Make windows minimizable
-			$( ".window" ).on( "click", ".minimize", function() {
-				$( this ).closest( ".window" ).toggleClass( "minimized" );
-			});
-
-			// Make windows closable
-			$( ".window" ).on( "click", ".close", function() {
-				$( this ).closest( ".window" ).remove();
-			});
-		});
-	</script>
+	<meta charset="UTF-8">
+	<title>My Panel</title>
+	<link rel="stylesheet" href="style.css">
+	<!-- jQuery -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+
+	<!-- Taskbar -->
 	<div id="taskbar">
-		<a href="#compiler">Compiler</a>
-		<a href="#calculator">Calculator</a>
-		<a href="#fitness">Fitness Calculator</a>
-		<a href="#notes">Notes</a>
-		<a href="#todo">Todo</a>
-		<a href="#calendar">Calendar</a>
+		<ul>
+			<li><a href="calculator/calculator.html">Calculator</a></li>
+			<li><a href="notes/notes.html">Notes</a></li>
+			<li><a href="todo/todo.html">To-Do List</a></li>
+			<li><a href="calendar/calendar.html">Calendar</a></li>
+		</ul>
 	</div>
 
-	<div id="compiler" class="window">
-		<h2>Compiler</h2>
-		<!-- Add your compiler code here -->
-		<button class="minimize">-</button>
-		<button class="close">x</button>
+	<!-- Windows -->
+	<div class="window" id="calculator">
+		<div class="titlebar">
+			<span class="title">Calculator</span>
+			<span class="buttons">
+				<a href="#" class="minimize">_</a>
+				<a href="#" class="close">X</a>
+			</span>
+		</div>
+		<div class="content">
+			<!-- Calculator content goes here -->
+		</div>
 	</div>
 
-	<div id="calculator" class="window">
-		<h2>Calculator</h2>
-		<!-- Add your calculator code here -->
-		<button class="minimize">-</button>
-		<button class="close">x</button>
+	<div class="window" id="notes">
+		<div class="titlebar">
+			<span class="title">Notes</span>
+			<span class="buttons">
+				<a href="#" class="minimize">_</a>
+				<a href="#" class="close">X</a>
+			</span>
+		</div>
+		<div class="content">
+			<!-- Notes content goes here -->
+		</div>
 	</div>
 
-	<div id="fitness" class="window">
-		<h2>Fitness Calculator</h2>
-		<!-- Add your fitness calculator code here -->
-		<button class="minimize">-</button>
-		<button class="close
+	<div class="window" id="todo">
+		<div class="titlebar">
+			<span class="title">To-Do List</span>
+			<span class="buttons">
+				<a href="#" class="minimize">_</a>
+				<a href="#" class="close">X</a>
+			</span>
+		</div>
+		<div class="content">
+			<!-- To-Do List content goes here -->
+		</div>
+	</div>
+
+	<div class="window" id="calendar">
+		<div class="titlebar">
+			<span class="title">Calendar</span>
+			<span class="buttons">
+				<a href="#" class="minimize">_</a>
+				<a href="#" class="close">X</a>
+			</span>
+		</div>
+		<div class="content">
+			<!-- Calendar content goes here -->
+		</div>
+	</div>
+
+	<!-- JS -->
+	<script src="script.js"></script>
+
+</body>
+</html>
