--- a/index.html
+++ b/index.html
@@ -32,3 +32,17 @@
 
 	<!-- Windows -->
 	<div id="windows">
+
+		<!-- Compiler -->
+		<div class="window" id="compiler">
+			<div class="titlebar">
+				<div class="title">Compiler</div>
+				<div class="buttons">
+					<a href="#" class="minimize" title="Minimize Compiler">&#x2500;</a>
+					<a href="#" class="fullscreen" title="Fullscreen Compiler">&#x2196;</a>
+					<a href="#" class="close" title="Close Compiler">&#x2715;</a>
+				</div>
+			</div>
+				<iframe src="compiler/index.html"></iframe>
+			</div>
+		</div>
