will add calculator later lol

--- a/index.html
+++ b/index.html
@@ -46,3 +46,17 @@
 				<iframe src="compiler/index.html"></iframe>
 			</div>
 		</div>
+
+		<!-- Calculator -->
+		<div class="window" id="calculator">
+			<div class="titlebar">
+				<div class="title">Calculator</div>
+				<div class="buttons">
+					<a href="#" class="minimize" title="Minimize Calculator">&#x2500;</a>
+					<a href="#" class="fullscreen" title="Fullscreen Calculator">&#x2196;</a>
+					<a href="#" class="close" title="Close Calculator">&#x2715;</a>
+				</div>
+			</div>
+				<iframe src="calculator/index.html"></iframe>
+			</div>
+		</div>
