--- a/index.html
+++ b/index.html
@@ -60,3 +60,17 @@
 				<iframe src="calculator/index.html"></iframe>
 			</div>
 		</div>
+
+		<!-- Fitness Calculator -->
+		<div class="window" id="fitness-calculator">
+			<div class="titlebar">
+				<div class="title">FitCal Dev</div>
+				<div class="buttons">
+					<a href="#" class="minimize" title="Minimize Fitness Calculator">&#x2500;</a>
+					<a href="#" class="fullscreen" title="Fullscreen Fitness Calculator">&#x2196;</a>
+					<a href="#" class="close" title="Close Fitness Calculator">&#x2715;</a>
+				</div>
+			</div>
+				<iframe src="fitcal-dev/index.html"></iframe>
+			</div>
+		</div>
