--- a/index.html
+++ b/index.html
@@ -74,3 +74,17 @@
 				<iframe src="fitcal-dev/index.html"></iframe>
 			</div>
 		</div>
+
+		<!-- Notes -->
+		<div class="window" id="notes">
+			<div class="titlebar">
+				<div class="title">Notes</div>
+				<div class="buttons">
+					<a href="#" class="minimize" title="Minimize Notes">&#x2500;</a>
+					<a href="#" class="fullscreen" title="Fullscreen Notes">&#x2196;</
+                        <a href="#" class="close" title="Close Notes">&#x2715;</a>
+                    </div>
+                </div>
+                <iframe src="notes/index.html"></iframe>
+            </div>
+        
