--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <a href="#" class="close" title="Close To-Do List">&#x2715;</a>
                     </div>
                 </div>
-                <iframe src="todo/index.html"></iframe>
+                <iframe src="to-do/index.html"></iframe>
             </div>
         
         
