timer tick tick tick

--- a/clock/index.html
+++ b/clock/index.html
@@ -22,6 +22,19 @@
           <span id="year">2021</span>
         </div>
       </div>
+      <div class="timer">
+        <h2>Timer</h2>
+        <div class="timer-input">
+          <input type="number" min="0" max="23" placeholder="Hours" id="timer-hours" />
+          <input type="number" min="0" max="59" placeholder="Minutes" id="timer-minutes" />
+          <input type="number" min="0" max="59" placeholder="Seconds" id="timer-seconds" />
+        </div>
+        <div class="timer-buttons">
+          <button id="start-timer">Start</button>
+          <button id="pause-timer">Pause</button>
+          <button id="stop-timer">Stop</button>
+        </div>
+      </div>
       
     <script src="script.js"></script>
   </body>
