stopwatch go preepreepree

--- a/clock/index.html
+++ b/clock/index.html
@@ -35,6 +35,23 @@
           <button id="stop-timer">Stop</button>
         </div>
       </div>
+      <div class="stopwatch">
+        <h2>Stopwatch</h2>
+        <div class="stopwatch-time">
+          <span id="sw-hours">00</span>
+          <span>:</span>
+          <span id="sw-minutes">00</span>
+          <span>:</span>
+          <span id="sw-seconds">00</span>
+          <span>.</span>
+          <span id="sw-milliseconds">000</span>
+        </div>
+        <div class="stopwatch-buttons">
+          <button id="start-stopwatch">Start</button>
+          <button id="pause-stopwatch">Pause</button>
+          <button id="reset-stopwatch">Reset</button>
+        </div>
+      </div>
       
     <script src="script.js"></script>
   </body>
