alarm go tring tring tring

--- a/clock/index.html
+++ b/clock/index.html
@@ -52,7 +52,17 @@
           <button id="reset-stopwatch">Reset</button>
         </div>
       </div>
-      
+      <div class="alarms">
+        <h2>Alarms</h2>
+        <div class="alarms-input">
+          <input type="time" id="alarm-time" />
+        </div>
+        <div class="alarms-buttons">
+          <button id="set-alarm">Set</button>
+          <button id="stop-alarm">Stop</button>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
