--- a/recorder/index.html
+++ b/recorder/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<title>Screen Recorder</title>
+	<style>
+		#video {
+			width: 100%;
+			height: 100%;
+		}
+	</style>
 </head>
 <body>
-    
+	<div>
+		<video id="video"></video>
+		<button id="start">Start Recording</button>
+		<button id="stop" disabled>Stop Recording</button>
+	</div>
+    <script src="script.js"></script>
 </body>
-</html>
