--- a/recorder/index.html
+++ b/recorder/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 	<title>Screen Recorder</title>
-
-	
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div>
