--- a/qr/index2.html
+++ b/qr/index2.html
@@ -10,7 +10,7 @@
     <form>
       <label for="input">Enter text or URL:</label>
       <input type="text" id="input" placeholder="Enter text or URL">
-      <button type="button" onclick="generateQRCode()">Generate</button>
+      <button type="button" onclick="generateQR()">Generate</button>
     </form>
     <div id="qrcode"></div>
     <script src="script.js"></script>
