--- a/calendar/index.html
+++ b/calendar/index.html
@@ -24,7 +24,8 @@
           <tbody id="calendar-body">
           </tbody>
         </table>
-      </div>      
+      </div>
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>      
       <script src="script.js"></script>
 </body>
 </html>
