--- a/qr/index.html
+++ b/qr/index.html
@@ -13,6 +13,8 @@
     <button id="generate">Generate QR Code</button>
     <div id="qrcode"></div>
   </div>
+
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
   <script src="script.js"></script>
 </body>
