--- a/fitcal-dev/index.html
+++ b/fitcal-dev/index.html
@@ -3,33 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ultimate Fitness Calculator</title>
+  <title>The Ultimate Fitness Calculator</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
 </head>
 <body>
   <div class="container">
-    <div class="header">
-      <h1>Ultimate Fitness Calculator</h1>
-    </div>
+    <h1>The Ultimate Fitness Calculator</h1>
     <div class="form">
-      <label for="weight">Weight (kg):</label>
-      <input type="number" id="weight" name="weight" class="input">
-      <label for="height">Height (cm):</label>
-      <input type="number" id="height" name="height" class="input">
-      <label for="age">Age (years):</label>
-      <input type="number" id="age" name="age" class="input">
-      <label for="activity">Activity Level:</label>
-      <select id="activity" name="activity" class="input">
-        <option value="sedentary">Sedentary</option>
-        <option value="lightly active">Lightly Active</option>
-        <option value="moderately active">Moderately Active</option>
-        <option value="very active">Very Active</option>
-        <option value="extra active">Extra Active</option>
+      <label for="choice">Choose a number:</label>
+      <select id="choice" name="choice">
+        <option value="1">BMI</option>
+        <option value="2">BMR</option>
+        <option value="3">TDEE</option>
+        <option value="4">Calories Needed to Lose Weight</option>
+        <option value="5">Calories Needed to Gain Weight</option>
+        <option value="6">Calories Needed to Maintain Weight</option>
+        <option value="7">Calculate Everything</option>
       </select>
-      <button type="submit" class="button">Calculate</button>
+      <div id="input-fields"></div>
+      <button id="calculate-btn">Calculate</button>
     </div>
-    <div class="result"></div>
+    <div id="result" class="result"></div>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
